Sort list items in View all light services list popup alphabetically